--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,9 +23,10 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
+	height: 100vh;
 	line-height: 1;
-  background-color: grey;
-  color: white;
+	background-image: linear-gradient(45deg, white, rgb(153, 224, 247));
+  color: rgb(255, 0, 0);
   font-family:Arial, Helvetica, sans-serif
 }
 ol, ul {
