--- a/src/views/OnePieceTwentyQuestions/onePieceTwentyQuestions.styles.css
+++ b/src/views/OnePieceTwentyQuestions/onePieceTwentyQuestions.styles.css
@@ -39,7 +39,7 @@
   border: none;
   border-radius: 100%;
   padding: 80px 80px;
-  color: white;
+  color: rgb(255, 255, 255);
   cursor: pointer;
   margin-top: 50px;
   margin-bottom: 40px;
@@ -58,7 +58,7 @@
 .op-link {
   font-size: 16px;
   font-weight: 900;
-  color: white;
+  color: rgb(255, 0, 0);
   text-decoration: underline;
 }
 
@@ -83,7 +83,8 @@
 }
 .op-list {
   margin-top: .5rem;
-  border: white 1px solid;
+  border: rgb(0, 0, 0) 1px solid;
+  background-color: white;
   border-radius: 8px;
   height: 400px;
 }
@@ -109,9 +110,9 @@
 .op-character-link-wrapper {
   width: 400px;
   min-height: 80px;
-  border: 1px solid white;
+  border: 1px solid rgb(0, 0, 0);
   border-radius: 8px;
-
+  background-color: white;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -121,7 +122,7 @@
 .op-list-header {
   display: flex;
   align-items: center;
-  border-bottom: 1px white solid;
+  border-bottom: 1px rgb(0, 0, 0) solid;
 }
 
 .op-list-items {
@@ -130,7 +131,7 @@
 }
 
 .op-list-header-question {
-  border-right: 1px white solid;
+  border-right: 1px rgb(0, 0, 0) solid;
   width: 75%;
   display: flex;
   align-items: center;
@@ -147,12 +148,12 @@
 }
 
 .op-list-item-row {
-  border-bottom: 1px white solid;
+  border-bottom: 1px rgb(0, 0, 0) solid;
   display: flex;
 }
 
 .op-list-item-question {
-  border-right: 1px white solid;
+  border-right: 1px rgb(0, 0, 0) solid;
   width: 75%;
   display: flex;
   align-items: center;
@@ -172,18 +173,23 @@
 
 .yes {
   background-color: rgb(90, 221, 90);
+  color: white;
 }
 
 .no {
   background-color: rgb(234, 113, 113);
+  color: white;
 }
 
 .kinda {
   background-color: #ef962b;
+  color: white;
+
 }
 
 .inconclusive {
   background-color: rgb(153, 198, 213);
+  color: white;
 }
 
 .op-question-counter {
@@ -195,7 +201,7 @@
 }
 
 .link-hidden {
-  background-color: white;
+  background-color: rgb(255, 0, 0);
 }
 
 .hide-icon {
