--- a/src/components/RadioGroup/radioGroup.styles.css
+++ b/src/components/RadioGroup/radioGroup.styles.css
@@ -21,7 +21,7 @@
   font-weight: 700;
   position: relative;
   background-color: white;
-  color: black;
+  color: rgb(255, 0, 0);
   transition: all 0.48s cubic-bezier(0.23, 1, 0.32, 1);
 }
 
@@ -60,8 +60,8 @@
 }
 
 .tab-group label:hover {
-  border-color: black;
-  color: black;
+  border-color: rgb(255, 0, 0);
+  color: rgb(255, 0, 0);
 }
 
 .tab-group input:checked + label {
